<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.niis</groupId>
    <artifactId>xrd4j</artifactId>
    <version>0.4.0</version>
    <packaging>pom</packaging>
    <name>XRd4J</name>
    <inceptionYear>2018</inceptionYear>
    <description>
        XRd4J is a Java library for building X-Road v6 Adapter Servers 
        and clients. The library implements X-Road v6 SOAP profile. 
        The library takes care of serialization and deserialization of 
        SOAP messages: built-in support for standard X-Road SOAP headers, 
        only processing of application specific request and response 
        elements must be implemented.
    </description>
    <url>https://github.com/nordic-institute/xrd4j</url>
    <modules>
        <module>common</module>
        <module>client</module>
        <module>server</module>
        <module>rest</module>
    </modules>
    <properties>
        <slf4j.version>1.7.30</slf4j.version>
        <log4j.version>2.17.1</log4j.version>
        <junit.version>3.8.1</junit.version>
        <jdk.version>1.8</jdk.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
        <sonar.junit.reportPaths>common/target/surefire-reports,client/target/surefire-reports,rest/target/surefire-reports,server/target/surefire-reports</sonar.junit.reportPaths>
    </properties>
    <dependencies>
        <!-- SOAP API for JRE 11 support -->
        <dependency>
            <groupId>com.sun.xml.messaging.saaj</groupId>
            <artifactId>saaj-impl</artifactId>
            <version>1.3.28</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Logging API: SLF4J -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <!-- Logging for tests: SL4J -> Log4j -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git@github.com:nordic-institute/xrd4j.git</connection>
        <developerConnection>scm:git:git@github.com:nordic-institute/xrd4j.git</developerConnection>
        <url>git@github.com:nordic-institute/xrd4j.git</url>
    </scm>
    <developers>
        <developer>
            <id>niis</id>
            <name>Nordic Institute for Interoperability Solutions (NIIS)</name>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>+2</timezone>
        </developer>
        <developer>
            <id>vrk</id>
            <name>Population Register Centre (VRK)</name>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>+2</timezone>
        </developer>
        <developer>
            <id>petkivim</id>
            <name>Petteri Kivimäki</name>
            <email>dinky_jackson@hotmail.com</email>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>+2</timezone>
        </developer>
    </developers>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.17</version>
                <configuration>
                    <systemProperties>
                        <property>
                            <name>log4j.configuration</name>
                            <value>test-log4j.xml</value>
                        </property>
                    </systemProperties>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <header>com/mycila/maven/plugin/license/templates/MIT.txt</header>
                    <properties>
                        <owner>Nordic Institute for Interoperability Solutions (NIIS)</owner>
                    </properties>
                    <skipExistingHeaders>true</skipExistingHeaders>
                    <includes>
                        <include>**/*.java</include>
                    </includes>
                </configuration>
                <executions>
                    <execution>
                        <id>license-headers</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.7.9</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>6.5.0</version>
                <configuration>
                    <cveValidForHours>24</cveValidForHours>
                    <skip>false</skip>
                    <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
                    <enableExperimental>false</enableExperimental>
                    <suppressionFiles>
                        <suppressionFile>dependency-check-suppressions.xml</suppressionFile>
                    </suppressionFiles>
                    <formats>
                        <format>HTML</format>
                        <format>XML</format>
                    </formats>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.17</version>
                <executions>
                    <execution>
                        <id>validate</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <phase>validate</phase>
                        <configuration>
                            <configLocation>checkstyle-config.xml</configLocation>
                            <encoding>UTF-8</encoding>
                            <consoleOutput>true</consoleOutput>
                            <failsOnError>true</failsOnError>
                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <includes>
                    <include>test-log4j.xml</include>
                </includes>
            </testResource>
        </testResources>
    </build>
    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>2.10.4</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            <!-- Deploy artifacts to NIIS Maven repository. Deployment must
                 be run using "release" profile (mvn clean deploy -P release). -->
            <distributionManagement>
                <snapshotRepository>
                    <id>niis-snapshots</id>
                    <url>https:/artifactory.niis.org/xroad-maven-snapshots/</url>
                </snapshotRepository>
                <repository>
                    <id>niis-releases</id>
                    <url>https://artifactory.niis.org/xroad-maven-releases/</url>
                </repository>
            </distributionManagement>
        </profile>
    </profiles>
</project>
